2007-12-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #495123

	* e-msg-composer.c:
	* e-msg-composer-hdrs.h:
	* e-msg-composer-hdrs.c:
	Move signature handling to e-msg-composer-hdrs.c.
	Use an ESignatureComboBox.

	* e-composer-from-header.h:
	* e-composer-from-header.c:
	Clean up the GtkHBox hack.  The signature combo is now packed
	directly into the GtkTable.

	* e-composer-name-header.c:
	* e-composer-text-header.c:
	Code cleanup.

2007-11-29  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #271551

	* e-msg-composer.h: (e_msg_composer_set_attach_path),
	(e_msg_composer_get_attach_path):
	* e-msg-composer.c: (e_msg_composer_set_attach_path),
	(e_msg_composer_get_attach_path):
	Functions to set/get attach path to both composer and editor.
	* e-msg-composer.c: (prepare_engine):
	Set last used path right after creation of the engine.
	* e-msg-composer-select-file.c: (get_selector), (select_file_response),
	(select_attach_response): Using new functions.
	* listener.c: (impl_event): Store new file path when received event
	about its change.

	* e-msg-composer.c: (set_signature_gui): Leak fix.

2007-11-27  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #495123

	* Makefile.am:
	Add a bunch of files for managing composer headers.

	* e-msg-composer.c (build_message), (from_changed_cb),
	(set_editor_signature), (e_msg_composer_set_body),
	(e_msg_composer_get_preferred_account):
	Use e_msg_composer_hdrs_get_from_account() to obtain the EAccount.

	* e-msg-composer-hdrs.c:
	* e-msg-composer-hdrs.h:
	Massive refactoring to use new EComposerHeader classes.

	* e-composer-header.c:
	* e-composer-header.h:
	* e-composer-from-header.c:
	* e-composer-from-header.h:
	* e-composer-name-header.c:
	* e-composer-name-header.h:
	* e-composer-post-header.c:
	* e-composer-post-header.h:
	* e-composer-text-header.c:
	* e-composer-text-header.h:
	New GObject classes manage different types of composer headers.