@@ -6882,6 +6882,25 @@ For example: &quot;Work&quot; or &quot;Personal&quot;</property>
 			  </child>
 
 			  <child>
+			    <widget class="GtkCheckButton" id="chkRequestReceipt">
+			      <property name="visible">True</property>
+			      <property name="can_focus">True</property>
+			      <property name="label" translatable="yes">Always request rea_d receipt</property>
+			      <property name="use_underline">True</property>
+			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <property name="focus_on_click">True</property>
+			      <property name="active">False</property>
+			      <property name="inconsistent">False</property>
+			      <property name="draw_indicator">True</property>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">False</property>
+			      <property name="fill">False</property>
+			    </packing>
+			  </child>
+
+			  <child>
 			    <widget class="GtkTable" id="tableForwardsReplies">
 			      <property name="visible">True</property>
 			      <property name="n_rows">3</property>
