@@ -1,3 +1,10 @@
+2008-01-02  Milan Crha  <mcrha@redhat.com>
+
+	** Part of fix for bug #364642
+
+	* e-msg-composer.c: (create_composer): Preset "Request Read Receipt"
+	based on gconf key "/apps/evolution/mail/composer/request_receipt".
+
 2007-12-01  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes part of bug #495123
